Fix width of cards on mobile
Move padding where the flex-basiss is.

--- a/css/card.css
+++ b/css/card.css
@@ -20,6 +20,7 @@
     flex-basis: 33%;
 
     margin-bottom: 1rem;
+    padding: 0 1%;
 
     -ms-flex-preferred-size: 33%;
 }
@@ -37,8 +38,6 @@
     display: flex;
 
         flex-direction: column;
-
-    padding: 0 1rem;
 
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
